--- a/src/components/command-launcher/CommandLauncher.module.scss
+++ b/src/components/command-launcher/CommandLauncher.module.scss
@@ -1,7 +1,20 @@
+@import '../../style/vars';
+
 .commandLauncher {
-    width: 500px;
-    margin: 0 auto;
+    border: 1px solid red;
+    border-radius: 10px;
+    min-width: 500px;
     display: flex;
-    flex-direction: column;
-    height: 500px;
+    height: 100%;
+    justify-content: start;
+    color: $primaryFontColor;
+    // border: 1px solid red;
+    
+    .commandView {
+        width: 50%;
+    }
+
+    .actionView {
+        width: 50%;
+    }
 }
