--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,7 @@
 .app {
     .launcherWrapper {
-        height: 100vh;
+        display: flex;
+        height: 500px;
+        width: 1000px;
     }
 }
