--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,1 +1,8 @@
-$primaryFontColor: rgb(226, 226, 226);
+$primaryFontColor: rgb(202, 202, 202);
+$highlightColor: #464646;
+$backgroundColor: rgb(43, 43, 43);
+$errorColor: rgb(230, 69, 69);
+$standardFontSize: 22px;
+$titleFontSize: 32px;
+$borderColor: grey;
+$horizontalEdgePadding: 10px;
