--- a/src/components/command-launcher/CommandLauncher.module.scss
+++ b/src/components/command-launcher/CommandLauncher.module.scss
@@ -1,20 +1,34 @@
 @import '../../style/vars';
 
+$borderRadius: 10px;
+
 .commandLauncher {
-    border: 1px solid red;
     border-radius: 10px;
-    min-width: 500px;
+    width:100%;
+    overflow: hidden;
     display: flex;
     height: 100%;
     justify-content: start;
     color: $primaryFontColor;
-    // border: 1px solid red;
-    
+    background-color: $backgroundColor;
+
     .commandView {
+        & > *{
+            padding-top: $borderRadius;
+            input {
+                padding-left: $borderRadius;
+            }
+            li {
+                padding-left: $borderRadius;
+            }
+        }
+
         width: 50%;
+        border-right: solid $borderColor 2px;
     }
 
     .actionView {
         width: 50%;
+        height: 100%;
     }
 }
