--- a/src/components/command-launcher/command-view/CommandView.module.scss
+++ b/src/components/command-launcher/command-view/CommandView.module.scss
@@ -1,8 +1,9 @@
+@import '../../../style/vars';
+
 .commandView {
-    background-color: rgb(43, 43, 43);
     height: 100%;
     .searchBarWrapper {
-        border-bottom: 2px solid rgb(180, 180, 180);
+        border-bottom: 2px solid $borderColor;
     }
     .commandListWrapper {
         
