--- a/src/components/command-launcher/description-view/DescriptionView.module.scss
+++ b/src/components/command-launcher/description-view/DescriptionView.module.scss
@@ -1,3 +1,21 @@
+@import '../../../style/vars';
+
 .descriptionView {
-    
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-top: 10px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    .contentWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+
+        .title {
+            font-size: $titleFontSize;
+            margin: 10px 0;
+        }
+    }
 }
