--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -4,5 +4,6 @@ $backgroundColor: rgb(43, 43, 43);
 $errorColor: rgb(230, 69, 69);
 $standardFontSize: 22px;
 $titleFontSize: 32px;
+$outputFontSize: 16px;
 $borderColor: grey;
 $horizontalEdgePadding: 10px;
